--- a/header.tex
+++ b/header.tex
@@ -35,6 +35,7 @@
 \newcommand{\mytheorem}{}
 \newcommand{\myequation}{}
 \newcommand{\myalgorithm}{}
+\newcommand{\myexample}{}
 \else
 \newcommand{\mychapter}{Chapter~}
 \newcommand{\mysection}{Section~}
@@ -45,6 +46,7 @@
 \newcommand{\mytheorem}{Theorem~}
 \newcommand{\myequation}{Equation~}
 \newcommand{\myalgorithm}{Figure~}
+\newcommand{\myexample}{Example~}
 \fi
 
 % theorems
