--- a/header.tex
+++ b/header.tex
@@ -66,6 +66,7 @@
 
 % macros
 \newcommand{\missing}{\textbf{XXX}}
+\newcommand{\algmissing}{Sorry, I still have to typeset the algorithm for Authorea :-) Check GitHub instead.}
 \newcommand{\gcc}{{\tt gcc}}
 \newcommand{\gprof}{{\tt gprof}}
 \newcommand{\spacesaving}{Space-Saving}
