--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -874,3 +874,70 @@
   address = {New York, NY, USA},
   keywords = {call graph, calling context tree, dynamic program analysis, edge profiling, profiling, vertex profiling}
 }
+
+@inproceedings{Bond05,
+  author = {Bond, Michael D. and McKinley, Kathryn S.},
+  title = {{Continuous Path and Edge Profiling}},
+  booktitle = {Proceedings of the 38th Annual IEEE/ACM International Symposium on Microarchitecture},
+  series = {MICRO 38},
+  year = {2005},
+  isbn = {0-7695-2440-0},
+  location = {Barcelona, Spain},
+  pages = {130--140},
+  numpages = {11},
+  url = {http://dx.doi.org/10.1109/MICRO.2005.16},
+  doi = {10.1109/MICRO.2005.16},
+  acmid = {1100545},
+  publisher = {IEEE Computer Society},
+  address = {Washington, DC, USA}
+}
+
+@inproceedings{Bond05b,
+  author = {Bond, Michael D. and McKinley, Kathryn S.},
+  title = {{Practical Path Profiling for Dynamic Optimizers}},
+  booktitle = {Proceedings of the International Symposium on Code Generation and Optimization},
+  series = {CGO '05},
+  year = {2005},
+  isbn = {0-7695-2298-X},
+  pages = {205--216},
+  numpages = {12},
+  url = {http://dx.doi.org/10.1109/CGO.2005.28},
+  doi = {10.1109/CGO.2005.28},
+  acmid = {1048988},
+  publisher = {IEEE Computer Society},
+  address = {Washington, DC, USA}
+}
+
+@inproceedings{Apiwattanapong02,
+  author = {Apiwattanapong, Taweesup and Harrold, Mary Jean},
+  title = {{Selective Path Profiling}},
+  booktitle = {Proceedings of the 2002 ACM SIGPLAN-SIGSOFT Workshop on Program Analysis for Software Tools and Engineering},
+  series = {PASTE '02},
+  year = {2002},
+  isbn = {1-58113-479-7},
+  location = {Charleston, South Carolina, USA},
+  pages = {35--42},
+  numpages = {8},
+  url = {http://doi.acm.org/10.1145/586094.586104},
+  doi = {10.1145/586094.586104},
+  acmid = {586104},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {dynamic analysis, path profiling, static analysis}
+}
+
+@inproceedings{Joshi04,
+  author = {Joshi, Rahul and Bond, Michael D. and Zilles, Craig},
+  title = {{Targeted Path Profiling: Lower Overhead Path Profiling for Staged Dynamic Optimization Systems}},
+  booktitle = {Proceedings of the International Symposium on Code Generation and Optimization: Feedback-directed and Runtime Optimization},
+  series = {CGO '04},
+  year = {2004},
+  isbn = {0-7695-2102-9},
+  location = {Palo Alto, California},
+  pages = {239--250},
+  url = {http://dl.acm.org/citation.cfm?id=977395.977660},
+  acmid = {977660},
+  publisher = {IEEE Computer Society},
+  address = {Washington, DC, USA},
+  doi = {10.1109/CGO.2004.1281678}
+}
