--- a/header.tex
+++ b/header.tex
@@ -74,4 +74,4 @@
 \newcommand{\ksf}{\mbox{$k$-SF}}
 \newcommand{\kblpp}{\mbox{$k$-BLPP}}
 \newcommand{\blpp}{\mbox{BLPP}}
-\newcommand{\etal}{\em et al.}
+\newcommand{\etal}{{\em et al.}}
